commit on "master

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,7 @@ DB_URI = mongodb://localhost:27017/Ecommerce
 JWT_SECRET = mashaAllah
 JWT_EXPIRE =5d
 COOKIE_EXPIRE=5
+
+SMPT_SERVICE = gmail
+SMPT_MAIL = sajeersayed@gmail.com
+SMPT_PASSWORD = rugmfhhjlqxiqwuz
